Added concurrency logic