@@ -8,6 +8,9 @@ import java.rmi.*;
 import java.rmi.server.*;
 import java.util.HashMap;
 import java.util.List;
+import java.util.concurrent.Callable;
+import java.util.concurrent.Future;
+import java.util.concurrent.FutureTask;
 
 
 public class FDSQuery extends UnicastRemoteObject implements FDS
@@ -28,15 +31,22 @@ public class FDSQuery extends UnicastRemoteObject implements FDS
      * @throws RemoteException
      */
     @Override
-    public String read(String filename) throws RemoteException{
-        if(isDeleted.containsKey(filename) && !isDeleted.get(filename)){
-            try {
-                return Files.readString(Path.of(filename));
-            } catch (IOException io){
-                io.printStackTrace();
+    public String read(String filename) throws Exception{
+        FutureTask readTask = new FutureTask<String>(new Callable<String>() {
+            @Override
+            public String call() throws Exception {
+                if(isDeleted.containsKey(filename) && !isDeleted.get(filename)){
+                    try {
+                        return Files.readString(Path.of(filename));
+                    } catch (IOException io){
+                        io.printStackTrace();
+                    }
+                }
+                return null;
             }
-        }
-        return null;
+        });
+        new Thread(readTask).start();
+        return (String) readTask.get();
     }
 
     /**
@@ -46,19 +56,27 @@ public class FDSQuery extends UnicastRemoteObject implements FDS
      * @throws RemoteException
      */
     @Override
-    public String create(String filename, String data) throws RemoteException {
-        try {
-            FileWriter myWriter = new FileWriter(filename);
-            isDeleted.put(filename, false);
-            myWriter.write(data);
-            myWriter.close();
-            System.out.println("Successfully created " + filename);
-            return filename;
-        } catch (IOException io) {
-            io.printStackTrace();
-        }
+    public String create(String filename, String data) throws Exception {
+        FutureTask createTask = new FutureTask<String>(new Callable<String>() {
+            @Override
+            public String call() throws Exception {
 
-        return null;
+                try {
+                    FileWriter myWriter = new FileWriter(filename);
+                    isDeleted.put(filename, false);
+                    myWriter.write(data);
+                    myWriter.close();
+                    System.out.println("Successfully created " + filename);
+                    return filename;
+                } catch (IOException io) {
+                    io.printStackTrace();
+                }
+
+                return null;
+            }
+        });
+        new Thread(createTask).start();
+        return (String) createTask.get();
     }
 
     /**
@@ -68,16 +86,24 @@ public class FDSQuery extends UnicastRemoteObject implements FDS
      * @throws RemoteException
      */
     @Override
-    public String update(String filename, String data) throws RemoteException {
-        if(isDeleted.containsKey(filename) && !isDeleted.get(filename)){
-            try {
-                Files.write(Paths.get(filename), data.getBytes(), StandardOpenOption.APPEND);
-                return Files.readString(Path.of(filename));
-            }catch (IOException e) {
-                e.printStackTrace();
+    public String update(String filename, String data) throws Exception {
+        FutureTask updateTask = new FutureTask<String>(new Callable<String>() {
+            @Override
+            public String call() throws Exception {
+                if(isDeleted.containsKey(filename) && !isDeleted.get(filename)){
+                    try {
+                        Files.write(Paths.get(filename), data.getBytes(), StandardOpenOption.APPEND);
+                        return Files.readString(Path.of(filename));
+                    }catch (IOException e) {
+                        e.printStackTrace();
+                    }
+                }
+                return null;
             }
-        }
-        return null;
+        });
+        new Thread(updateTask).start();
+        return (String) updateTask.get();
+
     }
 
     /**
@@ -86,13 +112,21 @@ public class FDSQuery extends UnicastRemoteObject implements FDS
      * @throws RemoteException
      */
     @Override
-    public boolean restore(String filename) throws RemoteException {
-        if(isDeleted.containsKey(filename)){
-            isDeleted.put(filename, false);
-            System.out.println("Successfully restored - " + filename);
-            return true;
-        }
-        return false;
+    public boolean restore(String filename) throws Exception {
+        FutureTask createTask = new FutureTask<Boolean>(new Callable<Boolean>() {
+            @Override
+            public Boolean call() throws Exception {
+
+                if(isDeleted.containsKey(filename)){
+                    isDeleted.put(filename, false);
+                    System.out.println("Successfully restored - " + filename);
+                    return true;
+                }
+                return false;
+            }
+        });
+        new Thread(createTask).start();
+        return (boolean) createTask.get();
     }
 
     /**
@@ -110,12 +144,20 @@ public class FDSQuery extends UnicastRemoteObject implements FDS
      * @throws RemoteException
      */
     @Override
-    public boolean delete(String filename) throws RemoteException {
-        if(isDeleted.containsKey(filename)){
-            isDeleted.put(filename, true);
-            System.out.println("Successfully deleted - " + filename);
-            return true;
-        }
-        return false;
+    public boolean delete(String filename) throws Exception {
+        FutureTask deleteTask = new FutureTask<Boolean>(new Callable<Boolean>() {
+            @Override
+            public Boolean call() throws Exception {
+
+                if(isDeleted.containsKey(filename)){
+                    isDeleted.put(filename, true);
+                    System.out.println("Successfully deleted - " + filename);
+                    return true;
+                }
+                return false;
+            }
+        });
+        new Thread(deleteTask).start();
+        return (boolean) deleteTask.get();
     }
 }
